--- a/css/reset.css
+++ b/css/reset.css
@@ -56,6 +56,7 @@ li{
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 nav ul{
@@ -71,4 +72,13 @@ nav ul a{
 
 nav ul a:hover{
     text-decoration-color: var(--tangerine);
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 3rem 2rem;
+    background-color: var(--dark-blue);
+    color: white;
+    align-items: center;
 }
