--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-resetStyle: /css/reset.css
+resetStyle: /assets/css/reset.css
 style: /style.css
 layout: 'base.njk'
 ---
@@ -20,7 +20,7 @@ layout: 'base.njk'
         </a>
     </div>
     <div class="img">
-        <img src="./img/silicon-valley.png" alt="">
+        <img src="/assets/img/silicon-valley.png" alt="">
     </div>
     <div class="quote">
         <blockquote>
