--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{resetStyle}}">
     <link rel="stylesheet" href="{{style}}">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>{{title}} Algoritmos e Estrutura de Dados</title>
 </head>
 <body>
@@ -17,5 +18,17 @@
     {{content | safe}}
  
     {% include 'footer.njk' %}
+
+    <script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 </body>
 </html>
