--- a/src/listas.njk
+++ b/src/listas.njk
@@ -1,6 +1,6 @@
 ---
 title: Resolução das Listas  - 
-resetStyle: /css/reset.css
+resetStyle: /assets/css/reset.css
 layout: 'base.njk'
 ---
 <div class="container">
